--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Add a Note</h5>
+        <h5 class="card-title">Add a Title</h5>
 
-        <div class="form-floating">
+        <input type="text" id="addTitle" placeholder="Title" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+
+        <h5 class="card-title" style="margin-top: 5px;">Add a Note</h5>
+        <div class="form-floating" style="margin-top: 5px;">
           <textarea class="form-control" id="addText" style="height: 100px"></textarea>
         </div>
 
